[gd_scene load_steps=2 format=3 uid="uid://d2stequgdquly"]

[ext_resource type="Script" path="res://dungeon.gd" id="1_bv2kw"]

[node name="dungeon" type="Node2D"]
script = ExtResource("1_bv2kw")

[node name="Container" type="Panel" parent="."]
offset_right = 1170.0
offset_bottom = 630.0

[node name="BackgroundRect" type="ColorRect" parent="Container"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TimeRect" type="ColorRect" parent="Container"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.188235, 0.0196078, 0.0666667, 1)

[node name="MarginContainer" type="MarginContainer" parent="Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 90
theme_override_constants/margin_right = 90

[node name="ProgressRect" type="ColorRect" parent="Container/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
color = Color(0.0666667, 0.0196078, 0.188235, 1)
